# channels-backend

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: channel_manager.py  main.py
src/models/: types.py
